fix collapse button incorrect display

--- a/resources/content.css
+++ b/resources/content.css
@@ -49,7 +49,7 @@
     min-width: 100px;
 }
 
-.teachers-note .mw-collapsible-toggle{
+.assignment-note .mw-collapsible-toggle{
     margin-top: -12px;
 }
 
